--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -643,8 +643,8 @@ p {
     transform: rotate(-130deg);
   }
 }
-/*=========================== 
-	NAVBAR CSS 
+/*===========================
+	NAVBAR CSS
 ============================= */
 .navbar-area {
   position: absolute;
@@ -662,7 +662,7 @@ p {
 .sticky {
   position: fixed;
   z-index: 99;
-  background-color: #fff;
+  background-color: rgba(1, 1, 1, 0.549);
   -webkit-box-shadow: 0px 20px 50px 0px rgba(0, 0, 0, 0.05);
   -moz-box-shadow: 0px 20px 50px 0px rgba(0, 0, 0, 0.05);
   box-shadow: 0px 20px 50px 0px rgba(0, 0, 0, 0.05);
@@ -673,19 +673,19 @@ p {
   transition: all 0.3s ease-out 0s;
 }
 .sticky .navbar .navbar-nav .nav-item a {
-  color: rgba(0, 0, 0, 0.9);
+  color: rgb(255, 253, 253);
 }
 .sticky .navbar .navbar-nav .nav-item a.active, .sticky .navbar .navbar-nav .nav-item a:hover {
-  color: #37C2CC;
+  color: #0e51cf;
 }
 .sticky .navbar .navbar-nav .nav-item a.active::before, .sticky .navbar .navbar-nav .nav-item a:hover::before {
-  background: #37C2CC;
+  background: #ffffff;
 }
 .sticky .navbar .header-btn .main-btn {
-  color: #fff;
+  color: rgba(1, 1, 1, 0.37);
 }
 .sticky .navbar .navbar-toggler .toggler-icon {
-  background: rgba(0, 0, 0, 0.9);
+  background: rgb(255, 255, 255);
 }
 
 .navbar {
@@ -796,7 +796,7 @@ p {
   }
 }
 .navbar-nav .nav-item a {
-  color: rgba(0, 0, 0, 0.9);
+  color: rgb(255, 251, 251);
   -webkit-transition: all 0.3s ease-out 0s;
   -moz-transition: all 0.3s ease-out 0s;
   -ms-transition: all 0.3s ease-out 0s;
@@ -816,7 +816,7 @@ p {
   }
 }
 .navbar-nav .nav-item a:hover, .navbar-nav .nav-item a.active {
-  color: #37C2CC;
+  color: #2b60e5;
 }
 
 @media (max-width: 767px) {
@@ -852,8 +852,7 @@ p {
   height: 780px;
   display: flex;
   align-items: center;
-  background: linear-gradient(180deg, #C2FBFF 0%, rgba(255, 255, 255, 0) 93.47%);
-  z-index: 1;
+  background: black;
 }
 @media only screen and (min-width: 1200px) and (max-width: 1399px) {
   .hero-section {
@@ -871,17 +870,7 @@ p {
     padding: 100px 0;
   }
 }
-.hero-section::after {
-  content: "";
-  position: absolute;
-  width: 862px;
-  height: 862px;
-  border-radius: 50%;
-  right: -150px;
-  top: -150px;
-  background: #99ECF2;
-  z-index: -1;
-}
+
 @media only screen and (min-width: 1200px) and (max-width: 1399px) {
   .hero-section::after {
     width: 780px;
@@ -905,6 +894,7 @@ p {
   }
 }
 .hero-section .hero-content h1 {
+  color: rgba(255, 255, 255, 0.96);
   margin-bottom: 15px;
 }
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
@@ -919,7 +909,7 @@ p {
 }
 .hero-section .hero-content p {
   margin-bottom: 30px;
-  color: rgba(0, 0, 0, 0.6);
+  color: rgba(255, 255, 255, 0.96);
   font-size: 18px;
 }
 @media only screen and (min-width: 1400px), only screen and (min-width: 1200px) and (max-width: 1399px) {
@@ -947,13 +937,14 @@ p {
 ================================== */
 .feature-section {
   position: relative;
-  background-image: url("../images/common-bg.svg");
-  background-size: cover;
-  background-position: bottom center;
   padding-top: 180px;
   padding-bottom: 55px;
+  background: black;
 }
 
+.feature-section .section-title p {
+  color: rgba(255, 255, 255, 0.96);
+}
 .single-feature {
   margin-bottom: 65px;
 }
@@ -979,21 +970,10 @@ p {
   margin-bottom: 40px;
 }
 .single-feature .feature-icon img {
-  width: 100%;
+  width: auto;
   height: auto;
 }
-.single-feature .feature-icon::before, .single-feature .feature-icon::after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  border-radius: 8px;
-  -webkit-transform: skew(-3deg);
-  -moz-transform: skew(-3deg);
-  -ms-transform: skew(-3deg);
-  -o-transform: skew(-3deg);
-  transform: skew(-3deg);
-}
+
 .single-feature .feature-icon::before {
   background: #D5F1F3;
   -webkit-transition: all 0.3s ease-out 0s;
